--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,50 +21,53 @@
 			      <ul class="nav navbar-nav">
 
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="/getting-started">GETTING STARTED</a>
+			          <a class="dropdown-toggle" href="/#">LINK 1</a>
 			        </li>
 
-					<li class="dropdown">
-			          <a class="dropdown-toggle" href="/gear-info">GEAR INFO</a>
-			        </li>
-
-			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="/buying-and-selling">BUYING & SELLING</a>
-			        </li>
-
-					<li class="dropdown">
-			          <a class="dropdown-toggle" href="/controls-and-specs">CONTROLS & SPECS</a>
+							<li class="dropdown">
+			          <a class="dropdown-toggle" href="/#">LINK 2</a>
 			        </li>
 
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="/safety">SAFETY</a>
+			          <a class="dropdown-toggle" href="/#">LINK 3</a>
 			        </li>
 
-					<li class="dropdown">
-			          <a class="dropdown-toggle" href="/maintenance">MAINTENANCE</a>
-			        </li>
-
-			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="/accessories">ACCESSORIES</a>
+							<li class="dropdown">
+			          <a class="dropdown-toggle" href="/#">LINK 4</a>
 			        </li>
 
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="/resources">RESOURCES</a>
+			          <a class="dropdown-toggle" href="/#">LINK 5</a>
+			        </li>
+
+							<li class="dropdown">
+			          <a class="dropdown-toggle" href="/#">LINK 6</a>
+			        </li>
+
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" href="/#">LINK 7</a>
+			        </li>
+
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" href="/#">LINK 8</a>
 			        </li>
 
 			      </ul>
 
-			     <div class="pull-right">
+						<!--
+				     <div class="pull-right">
 
-				    <div class="searchicon">
-				    	<img src="/images/search.png">
-				    </div>
+					    <div class="searchicon">
+					    	<img src="/images/search.png">
+					    </div>
 
-					<div class="nav-button-wrapper">
+							<div class="nav-button-wrapper">
 
-					</div>
+							</div>
 
-			     </div>
+				     </div>
+
+				 		-->
 
 			    </div>
 
